@@ -121,6 +121,14 @@ maintenance print remote-registers
   which registers were included in the last stop reply packet received by
   GDB.
 
+set args
+run
+start
+starti
+  These commands now all allow for entering inferior arguments that
+  contain a newline character.  The newline must be contained within a
+  single or double quoted argument.
+
 * New remote packets
 
 vFile:stat
